--- a/package.json
+++ b/package.json
@@ -9,25 +9,27 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@mdx-js/loader": "^3.1.0",
-    "@mdx-js/react": "^3.1.0",
-    "@next/mdx": "^15.1.4",
-    "@react-three/drei": "^9.120.5",
-    "@react-three/fiber": "^8.17.10",
+    "@mdx-js/loader": "^3.1.1",
+    "@mdx-js/react": "^3.1.1",
+    "@next/mdx": "^16.1.6",
+    "@react-three/drei": "^10.7.7",
+    "@react-three/fiber": "^9.5.0",
     "@types/mdx": "^2.0.13",
+    "@types/three": "^0.182.0",
     "framer-motion": "^11.16.0",
-    "next": "14.2.22",
-    "react": "^18",
-    "react-dom": "^18",
-    "react-icons": "^5.4.0"
+    "next": "^16.1.6",
+    "react": "^19.2.4",
+    "react-dom": "^19.2.4",
+    "react-icons": "^5.4.0",
+    "three": "^0.182.0"
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.16",
     "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
+    "@types/react": "^19.2.10",
+    "@types/react-dom": "^19.2.3",
     "eslint": "^8",
-    "eslint-config-next": "14.2.22",
+    "eslint-config-next": "^16.1.6",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
